overflow fix

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,12 +1,12 @@
 html {
   background-color: #E4E9FD;
-  background-image: -webkit-linear-gradient(65deg, #b4bfeb 50%, #fcd792 50%);
-  min-height: 100vh;
+  background-image: -webkit-linear-gradient(65deg, #A683E3 50%, #E4E9FD 50%);
+  min-height: 1000px;
   font-family: 'helvetica neue';
 }
 
 h1 {
-  color: #faf4e7;
+  color: #fff;
   padding: 10px;
 }
 
@@ -19,7 +19,7 @@ h1 {
 }
 
 #heading {
-  background-color: #847ed4;
+  background-color: #A683E3;
   text-align: center;
 }
 
@@ -30,13 +30,17 @@ h1 {
   border-bottom: 1px solid #F1F1F1;
 }
 
+.list-item{
+overflow-wrap: anywhere;
+}
+
 .item:last-child {
   border-bottom: 0;
 }
 
-input:checked+p {
+input:checked + p {
   text-decoration: line-through;
-  text-decoration-color: #847ed4;
+  text-decoration-color: #A683E3;
   transition: 200ms ease-in-out;
 }
 
@@ -49,10 +53,10 @@ p {
   padding: 20px;
   font-size: 20px;
   font-weight: 200;
-  color: #433f79;
+  color: #00204a;
 }
 
-form.item {
+form {
   text-align: center;
   margin-left: 20px;
 }
@@ -62,7 +66,7 @@ button {
   width: 50px;
   border-radius: 50%;
   border-color: transparent;
-  background-color: #847ed4;
+  background-color: #A683E3;
   color: #fff;
   font-size: 30px;
   padding-bottom: 0;
@@ -83,45 +87,42 @@ input[type="text"] {
 
 input[type="text"]:focus {
   outline: none;
-  box-shadow: inset 0 -3px 0 0 #847ed4;
+  box-shadow: inset 0 -3px 0 0 #A683E3;
   transition: 200ms ease-in-out;
 }
 
 ::placeholder {
-  font-family: 'helvetica neue';
   color: rgb(177, 177, 177);
   opacity: 1;
 }
-
-/* ======================================================== */
+ /* ======================================================== */
 
 footer {
   text-align: center;
 }
 
 .footer-text {
-  color: #393c74;
+  color: rgba(0, 0, 0, 0.5);
   font-size: 16px;
   padding: 0;
   padding-bottom: 20px;
 }
 
-.footer-link {
-  color: #393c74;
+.footer-link{
   text-decoration: none;
   transition: 200ms ease-in-out;
 }
 
-.footer-link:hover {
-  color: #81a3b3;
+.footer-link:hover{
+  color: #8c6fbb;
 }
 
-.list-link {
+.list-link{
   text-decoration: none;
-  color: #212a75;
+  color: #321a58;
   transition: 200ms ease-in-out;
 }
 
 .list-link:hover {
-  color: #6b72af;
+  color: #321a5860;
 }
